objects/TableGridAccessible__c.object
<CustomObject>
    <description>UP2GO Component: 2Forecast internal object to unit test the TableGrid / 2Table UI component.</description>
    <fields>
        <fullName>num_IntegerField__c</fullName>
        <label>Integer Field</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_InaccessibleField__c</fullName>
        <label>Inaccessible Field</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_TextField__c</fullName>
        <label>Text Field</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>TableGridAccessible</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TableGridAccessibles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>